--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>index page</h1>
-</body>
-</html>
+{% extends "base.html" %} {% block head %} {{ super() }}
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='extended_beauty.css') }}"
+/>
+{% endblock %} {% block content %} 
+<h1>Hello!</h1>
+
+  <img
+    src="{{ url_for('static', filename='images/pushup.png') }}"
+    alt="pushup guy"
+    height="200px"
+  />
+
+<p>
+  Welcome to your pushups-logger! <br />This website implements basic CRUD
+  Functionality and user authentication features using Flask.
+</p>
+{% endblock %}
