--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,14 @@
+<!--
+#############################################
+#         Pushup Logger Flask-App           #
+#-------------------------------------------#
+#  Author   : Yogesh Nile                   #
+#  Email    : yogeshnile.work4u@gmail.com   #
+#  Twitter  : twitter.com/YogeshNile        #
+#  GitHub   : github.com/yogeshnile         #
+#############################################
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
