--- a/templates/singup.html
+++ b/templates/singup.html
@@ -1,3 +1,14 @@
+<!--
+#############################################
+#         Pushup Logger Flask-App           #
+#-------------------------------------------#
+#  Author   : Yogesh Nile                   #
+#  Email    : yogeshnile.work4u@gmail.com   #
+#  Twitter  : twitter.com/YogeshNile        #
+#  GitHub   : github.com/yogeshnile         #
+#############################################
+-->
+
 {% extends "base.html" %} {% block head %} {{ super() }}
 <link
   rel="stylesheet"
@@ -15,6 +26,7 @@
         id="name"
         name="name"
         placeholder="Enter full name"
+        required
       />
     </div>
     <div class="form-group">
@@ -25,6 +37,7 @@
         id="email"
         name="email"
         placeholder="Enter email"
+        required
       />
     </div>
     <div class="form-group">
@@ -35,6 +48,7 @@
         id="password"
         name="password"
         placeholder="Password"
+        required
       />
     </div>
     <button type="submit" class="btn btn-primary">Sign Up</button>
