login auth added

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,3 +14,6 @@
   href="{{ url_for('static', filename='extended_beauty.css') }}"
 />
 {% endblock %}
+{% block content %}
+<h1>Welcome, {{ name }}!</h1>
+{% endblock %}
