--- a/templates/base.html
+++ b/templates/base.html
@@ -94,6 +94,11 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
+          {% if current_user.is_authenticated %}
+          <a href="#" class="btn btn-outline-primary" role="button"
+            >Add New Workout</a
+          >
+          {% endif %} {% if not current_user.is_authenticated %}
           <a
             href="{{ url_for('auth.singup') }}"
             class="btn btn-outline-primary"
@@ -107,6 +112,15 @@
             style="margin-left: 4px;"
             >Login</a
           >
+          {% endif %} {% if current_user.is_authenticated %}
+          <a
+            href="{{ url_for('auth.logout') }}"
+            class="btn btn-outline-danger"
+            role="button"
+            style="margin-left: 4px;"
+            >Log Out</a
+          >
+          {% endif %}
         </form>
       </div>
     </nav>
