--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           {% if current_user.is_authenticated %}
-          <a href="#" class="btn btn-outline-primary" role="button"
+          <a href="{{ url_for('main.new_workout') }}" class="btn btn-outline-primary" role="button"
             >Add New Workout</a
           >
           {% endif %} {% if not current_user.is_authenticated %}
