--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a
-              href="{{ url_for('main.index') }}"
+              href="{{ url_for('main.user_workouts') }}"
               class="btn btn-outline-secondary"
               role="button"
               >All Workouts</a
