--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,12 +8,14 @@
 #  GitHub   : github.com/yogeshnile         #
 #############################################
 -->
-{% extends "base.html" %} {% block head %} {{ super() }}
-<link
-  rel="stylesheet"
-  href="{{ url_for('static', filename='extended_beauty.css') }}"
-/>
+{% extends "base.html" %} 
+{% block head %} 
+  {{ super() }}
+<link rel="stylesheet" href="{{ url_for('static', filename= 'extended_beauty.css') }}"/>
+
 {% endblock %}
+<!--====================================================================================-->
 {% block content %}
 <h1>Welcome, {{ name }}!</h1>
+<!--====================================================================================-->
 {% endblock %}
