--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 <!--====================================================================================-->
 {% block content %}
 <h1>Welcome!</h1>
-  <center><img src="{{ url_for('static', filename='images/pushup.png') }}" alt="pushup guy" height="200px"/></center>
+  <center><img src="{{ url_for('static', filename='images/pushup.png') }}" alt="pushup guy" height="200px" width="400px"/></center>
 <p>
   Welcome to your pushups-logger! <br />This website implements basic CRUD
   Functionality and user authentication features using Flask.
