--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,10 @@
     <!--====================================================================================-->
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='images/muscle.ico') }}"/>
     <!--====================================================================================-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!--====================================================================================-->
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <!--====================================================================================-->
     <link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet"/>
     <!--====================================================================================-->
     <link rel="stylesheet" href="{{ url_for('static', filename='beauty.css') }}"/>
@@ -55,6 +59,10 @@
         </ul>
 <!--====================================================================================-->
         <form class="form-inline my-2 my-lg-0">
+<!--====================================================================================-->          
+          {% if current_user.is_authenticated %}
+          <h3 style="color: #4156bc; margin-right: 15px; margin-top: 3px;">Hello {{ current_user.name }}!</h3>
+          {% endif %}
 <!--====================================================================================-->
           {% if current_user.is_authenticated %}
           <a href="{{ url_for('main.new_workout') }}" class="btn btn-outline-primary" role="button">Add New Workout</a>
@@ -74,5 +82,38 @@
     </nav>
     {% block content %} 
     {% endblock %}
+<!--====================================================================================-->
+     <footer class="text-gray-700 body-font">
+  <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+    
+    <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">Made with ❤️ by
+     <a href="https://twitter.com/yogeshnile" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@YogeshNile</a>
+    </p>
+    <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+<!--=============================================================================================================================-->
+      <a class="ml-3 text-gray-500" href="https://bit.ly/3dbLJLC">
+        <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+          <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+        </svg>
+      </a>
+<!--=============================================================================================================================-->
+      <a class="ml-3 text-gray-500" href="https://bit.ly/32SXHV0">
+        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+          <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+          <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+        </svg>
+      </a>
+<!--=============================================================================================================================-->
+      <a class="ml-3 text-gray-500" href="https://bit.ly/2Ky3ho6">
+        <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+          <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+          <circle cx="4" cy="4" r="2" stroke="none"></circle>
+        </svg>
+      </a>
+<!--=============================================================================================================================-->
+    </span>
+  </div>
+</footer>
+<!--=============================================================================================================================-->
   </body>
 </html>
